Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/204
  Fix bpo-24596 for Stackless too.

- https://github.com/stackless-dev/stackless/issues/202
  The private include file "stackless_methods.h" is obsolete and has been
  removed.  

- https://github.com/stackless-dev/stackless/issues/201
  Enable stackless calls of "wrapper_descriptor" objects, if soft-switching is
  enabled. The code has been in Stackless forever, but was disabled for some
  unknown reason.

- https://github.com/stackless-dev/stackless/issues/192
  Use the PEP 442 mechanic to finalize a tasklet instead of a arcane logic in
  tp_dealloc. The finalizer can be called from Python-code: tasklet.__del__().
  Stackless calls the finalizer only once. The finalizer repeatedly kills the
  tasklet until it is dead but at most 10-times.
  If the finalizer can't kill the C-state it adds the tasklet to gc.garbage.
  This change unifies the behavior of de-allocation caused by ref-counting and
  de-allocation caused by GC. And it brings the behavior more in line with
  generators.

- https://github.com/stackless-dev/stackless/issues/199
  Enable stackless calls of coroutines wrapped in "asyncio._CTask", if
  soft-switching is enabled. Now asyncio runs coroutines stackless.

- https://github.com/stackless-dev/stackless/issues/197
  Enable stackless calls of method "contextvars.Context.run", if soft-switching
  is enabled.

- https://github.com/stackless-dev/stackless/issues/188
  Enable stackless calls of sub-iterators and coroutines (technically: the
  YIELD_FROM opcode) and of the following methods, if soft-switching is
  enabled:
    - generator.send() (generator.__next__() was already stackless);
    - coroutine.send();